--- a/project/build.properties
+++ b/project/build.properties
@@ -1,7 +1,10 @@
+#Project properties
+#Thu Mar 22 05:52:52 EDT 2012
+lift.version=2.4
 project.organization=mysample
 project.name=mysample
-project.version=1.0
 sbt.version=0.7.4
+project.version=1.0
 def.scala.version=2.7.7
 build.scala.versions=2.9.1
 project.initialize=false
